--- a/Todo.txt
+++ b/Todo.txt
@@ -1,38 +1,16 @@
-TODO: The banner on the homepage is still not visible. Any chance of fixing that?
+Hi yes, was just going through it.
 
-TODO:  On the product page, the final screenshot appears without a phone silhoutte. Was the image with the phone not available? I can send it if it is, or if it's an error then that needs to be fixed.  <========= DONE
+TODO: The colours on the navigation bar and the social media links at the bottom are still the old blue tone instead of the one provided in the brand design   ==========> DONE
 
-TODO: On the product page, can the images (of the phones) be larger/ occupy the empyty space better? They seem much smaller than the space provided -- provided a screenshot from the figma file to show what I mean <======== DONE
+TODO: The logo also has some strange artifact on the bottom, I've attached the actual icon here so you can replace it to one without the discolouration  ===========> DONE
 
-TODO: On the provided figma file, the header on all the pages is a white border with the logo, and then the page begins (shared in the screenshot attached) which isn't visible on the implementation <============ DONE
+TODO: The text "Your Skin aid on the homepage..." is much larger than any other piece of text, it needs to match the font size for headers throughout the website.
 
-TODO: The margins seem very large on the sides on all pages that have text. Can that be adjusted to be a little smaller? It seems it's very "pressed" in the center   <====== Done
+TODO: The spacing is still an issue (on the desktop version). I'm now viewing on a 1440p screen, and the things seem broken. See attached image(s).  ============> DONE
 
+TODO: The links for the Twitter and LinkedIn are broken. The URL for the 2 are:
 
+Twitter: https://twitter.com/@medeskinai
+LinkedIn: https://www.linkedin.com/company/medeskin-ai   =============> DONE
 
-Responsive Navbar:
-
-TODO: Display None of social accounts (flex flex-col md:space-y-20 space-y-10 text-black flex-1 justify-center items-center)
-
-TODO: Display None of Scroll down (text-black)
-
-TODO: Sift the toggle icon 
-
-
-
-
-  .res-account {
-    display: none !important;
-  }
-
-  .res-scroll {
-    display: none !important;
-  }
-
-  .res-sidebar {
-    display: none;
-  }
-
-  .res-hide{
-    display: block;
-  }
+On the mobile front, it seems to be okay/better. One small note: The ethics page isn't lined up properly on the mobile view, the "Law Compliance" which I would like renamed to "Compliance" is off center
